src/SRAPL/SRAPLParser.py
# Generated from /home/julczyk/Dokumenty/Automaty/VNP/SRAPL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SRAPLParser ( Parser ):

    grammarFileName = "SRAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'$PROGRAMM'", "'IF'", "'REDO'", 
                     "'RESTART'", "'X'", "<INVALID>", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'**'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "PARTS_HEADER", "PROGRAM_HEADER", "IF", 
                      "REDO", "RESTART", "MEM_TAG", "FUNC_ID", "ASSIGN", 
                      "PLUS", "MINUS", "MUL", "DIV", "POWER", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "SEMI", "COMMA", "FLOAT", "INT", "COMMENT", "WS" ]

    RULE_file = 0
    RULE_partsSection = 1
    RULE_floatList = 2
    RULE_value = 3
    RULE_programmSection = 4
    RULE_blockContent = 5
    RULE_statement = 6
    RULE_block = 7
    RULE_assignment = 8
    RULE_functionCall = 9
    RULE_argList = 10
    RULE_ifStatement = 11
    RULE_redoStatement = 12
    RULE_restartStatement = 13
    RULE_memoryRef = 14
    RULE_expression = 15

    ruleNames =  [ "file", "partsSection", "floatList", "value", "programmSection", 
                   "blockContent", "statement", "block", "assignment", "functionCall", 
                   "argList", "ifStatement", "redoStatement", "restartStatement", 
                   "memoryRef", "expression" ]

    EOF = Token.EOF
    PARTS_HEADER=1
    PROGRAM_HEADER=2
    IF=3
    REDO=4
    RESTART=5
    MEM_TAG=6
    FUNC_ID=7
    ASSIGN=8
    PLUS=9
    MINUS=10
    MUL=11
    DIV=12
    POWER=13
    LPAREN=14
    RPAREN=15
    LBRACE=16
    RBRACE=17
    LBRACK=18
    RBRACK=19
    SEMI=20
    COMMA=21
    FLOAT=22
    INT=23
    COMMENT=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def partsSection(self):
            return self.getTypedRuleContext(SRAPLParser.PartsSectionContext,0)


        def programmSection(self):
            return self.getTypedRuleContext(SRAPLParser.ProgrammSectionContext,0)


        def EOF(self):
            return self.getToken(SRAPLParser.EOF, 0)

        def getRuleIndex(self):
            return SRAPLParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile" ):
                return visitor.visitFile(self)
            else:
                return visitor.visitChildren(self)




    def file_(self):

        localctx = SRAPLParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.partsSection()
            self.state = 33
            self.programmSection()
            self.state = 34
            self.match(SRAPLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PartsSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARTS_HEADER(self):
            return self.getToken(SRAPLParser.PARTS_HEADER, 0)

        def floatList(self):
            return self.getTypedRuleContext(SRAPLParser.FloatListContext,0)


        def SEMI(self):
            return self.getToken(SRAPLParser.SEMI, 0)

        def getRuleIndex(self):
            return SRAPLParser.RULE_partsSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPartsSection" ):
                listener.enterPartsSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPartsSection" ):
                listener.exitPartsSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPartsSection" ):
                return visitor.visitPartsSection(self)
            else:
                return visitor.visitChildren(self)




    def partsSection(self):

        localctx = SRAPLParser.PartsSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_partsSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(SRAPLParser.PARTS_HEADER)
            self.state = 37
            self.floatList()
            self.state = 38
            self.match(SRAPLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloatListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SRAPLParser.ValueContext)
            else:
                return self.getTypedRuleContext(SRAPLParser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SRAPLParser.COMMA)
            else:
                return self.getToken(SRAPLParser.COMMA, i)

        def getRuleIndex(self):
            return SRAPLParser.RULE_floatList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatList" ):
                listener.enterFloatList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatList" ):
                listener.exitFloatList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatList" ):
                return visitor.visitFloatList(self)
            else:
                return visitor.visitChildren(self)




    def floatList(self):

        localctx = SRAPLParser.FloatListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_floatList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.value()
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 41
                self.match(SRAPLParser.COMMA)
                self.state = 42
                self.value()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(SRAPLParser.FLOAT, 0)

        def INT(self):
            return self.getToken(SRAPLParser.INT, 0)

        def getRuleIndex(self):
            return SRAPLParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = SRAPLParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not(_la==22 or _la==23):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgrammSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM_HEADER(self):
            return self.getToken(SRAPLParser.PROGRAM_HEADER, 0)

        def blockContent(self):
            return self.getTypedRuleContext(SRAPLParser.BlockContentContext,0)


        def getRuleIndex(self):
            return SRAPLParser.RULE_programmSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgrammSection" ):
                listener.enterProgrammSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgrammSection" ):
                listener.exitProgrammSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgrammSection" ):
                return visitor.visitProgrammSection(self)
            else:
                return visitor.visitChildren(self)




    def programmSection(self):

        localctx = SRAPLParser.ProgrammSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_programmSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(SRAPLParser.PROGRAM_HEADER)
            self.state = 51
            self.blockContent()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SRAPLParser.StatementContext)
            else:
                return self.getTypedRuleContext(SRAPLParser.StatementContext,i)


        def getRuleIndex(self):
            return SRAPLParser.RULE_blockContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockContent" ):
                listener.enterBlockContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockContent" ):
                listener.exitBlockContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockContent" ):
                return visitor.visitBlockContent(self)
            else:
                return visitor.visitChildren(self)




    def blockContent(self):

        localctx = SRAPLParser.BlockContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_blockContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 65784) != 0):
                self.state = 53
                self.statement()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(SRAPLParser.AssignmentContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(SRAPLParser.FunctionCallContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SRAPLParser.IfStatementContext,0)


        def redoStatement(self):
            return self.getTypedRuleContext(SRAPLParser.RedoStatementContext,0)


        def restartStatement(self):
            return self.getTypedRuleContext(SRAPLParser.RestartStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(SRAPLParser.BlockContext,0)


        def getRuleIndex(self):
            return SRAPLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SRAPLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.assignment()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.functionCall()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.ifStatement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.redoStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 63
                self.restartStatement()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 6)
                self.state = 64
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(SRAPLParser.LBRACE, 0)

        def blockContent(self):
            return self.getTypedRuleContext(SRAPLParser.BlockContentContext,0)


        def RBRACE(self):
            return self.getToken(SRAPLParser.RBRACE, 0)

        def getRuleIndex(self):
            return SRAPLParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SRAPLParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(SRAPLParser.LBRACE)
            self.state = 68
            self.blockContent()
            self.state = 69
            self.match(SRAPLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memoryRef(self):
            return self.getTypedRuleContext(SRAPLParser.MemoryRefContext,0)


        def ASSIGN(self):
            return self.getToken(SRAPLParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SRAPLParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(SRAPLParser.SEMI, 0)

        def getRuleIndex(self):
            return SRAPLParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SRAPLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.memoryRef()
            self.state = 72
            self.match(SRAPLParser.ASSIGN)
            self.state = 73
            self.expression(0)
            self.state = 74
            self.match(SRAPLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_ID(self):
            return self.getToken(SRAPLParser.FUNC_ID, 0)

        def LPAREN(self):
            return self.getToken(SRAPLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SRAPLParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(SRAPLParser.SEMI, 0)

        def argList(self):
            return self.getTypedRuleContext(SRAPLParser.ArgListContext,0)


        def getRuleIndex(self):
            return SRAPLParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = SRAPLParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(SRAPLParser.FUNC_ID)
            self.state = 77
            self.match(SRAPLParser.LPAREN)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 12599360) != 0):
                self.state = 78
                self.argList()


            self.state = 81
            self.match(SRAPLParser.RPAREN)
            self.state = 82
            self.match(SRAPLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SRAPLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SRAPLParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SRAPLParser.COMMA)
            else:
                return self.getToken(SRAPLParser.COMMA, i)

        def getRuleIndex(self):
            return SRAPLParser.RULE_argList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgList" ):
                listener.enterArgList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgList" ):
                listener.exitArgList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = SRAPLParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.expression(0)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 85
                self.match(SRAPLParser.COMMA)
                self.state = 86
                self.expression(0)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SRAPLParser.IF, 0)

        def LPAREN(self):
            return self.getToken(SRAPLParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SRAPLParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(SRAPLParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(SRAPLParser.BlockContext,0)


        def getRuleIndex(self):
            return SRAPLParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = SRAPLParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(SRAPLParser.IF)
            self.state = 93
            self.match(SRAPLParser.LPAREN)
            self.state = 94
            self.expression(0)
            self.state = 95
            self.match(SRAPLParser.RPAREN)
            self.state = 96
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RedoStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REDO(self):
            return self.getToken(SRAPLParser.REDO, 0)

        def SEMI(self):
            return self.getToken(SRAPLParser.SEMI, 0)

        def getRuleIndex(self):
            return SRAPLParser.RULE_redoStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRedoStatement" ):
                listener.enterRedoStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRedoStatement" ):
                listener.exitRedoStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRedoStatement" ):
                return visitor.visitRedoStatement(self)
            else:
                return visitor.visitChildren(self)




    def redoStatement(self):

        localctx = SRAPLParser.RedoStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_redoStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(SRAPLParser.REDO)
            self.state = 99
            self.match(SRAPLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RestartStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RESTART(self):
            return self.getToken(SRAPLParser.RESTART, 0)

        def SEMI(self):
            return self.getToken(SRAPLParser.SEMI, 0)

        def getRuleIndex(self):
            return SRAPLParser.RULE_restartStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRestartStatement" ):
                listener.enterRestartStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRestartStatement" ):
                listener.exitRestartStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRestartStatement" ):
                return visitor.visitRestartStatement(self)
            else:
                return visitor.visitChildren(self)




    def restartStatement(self):

        localctx = SRAPLParser.RestartStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_restartStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(SRAPLParser.RESTART)
            self.state = 102
            self.match(SRAPLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemoryRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MEM_TAG(self):
            return self.getToken(SRAPLParser.MEM_TAG, 0)

        def LBRACK(self):
            return self.getToken(SRAPLParser.LBRACK, 0)

        def INT(self):
            return self.getToken(SRAPLParser.INT, 0)

        def RBRACK(self):
            return self.getToken(SRAPLParser.RBRACK, 0)

        def getRuleIndex(self):
            return SRAPLParser.RULE_memoryRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemoryRef" ):
                listener.enterMemoryRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemoryRef" ):
                listener.exitMemoryRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemoryRef" ):
                return visitor.visitMemoryRef(self)
            else:
                return visitor.visitChildren(self)




    def memoryRef(self):

        localctx = SRAPLParser.MemoryRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_memoryRef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(SRAPLParser.MEM_TAG)
            self.state = 105
            self.match(SRAPLParser.LBRACK)
            self.state = 106
            self.match(SRAPLParser.INT)
            self.state = 107
            self.match(SRAPLParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SRAPLParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class VariableExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SRAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def memoryRef(self):
            return self.getTypedRuleContext(SRAPLParser.MemoryRefContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableExpr" ):
                listener.enterVariableExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableExpr" ):
                listener.exitVariableExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableExpr" ):
                return visitor.visitVariableExpr(self)
            else:
                return visitor.visitChildren(self)


    class PowerExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SRAPLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SRAPLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SRAPLParser.ExpressionContext,i)

        def POWER(self):
            return self.getToken(SRAPLParser.POWER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowerExpr" ):
                listener.enterPowerExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowerExpr" ):
                listener.exitPowerExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowerExpr" ):
                return visitor.visitPowerExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddSubExprContext(ExpressionContext):
